--- a/style.css
+++ b/style.css
@@ -171,6 +171,8 @@ text-transform: uppercase;
     /* background: linear-gradient(35deg ,rgb(230,182,237) 39%,rgb(199, 114, 207)25%); */
     height:calc(1.0*100vh);
     color: rgb(15, 18, 11);
+    padding-bottom: 20px;
+    
     /* background: linear-gradient(90deg ,rgb(0, 0, 0) 20.8%,rgb(219, 84, 84) 10%); */
     background: linear-gradient(90deg ,rgb(0, 0, 0) 20.8%,rgb(255, 255, 255) 10%);
 
@@ -186,11 +188,12 @@ text-transform: uppercase;
 }
 .abouticons{
     border-radius: 50%;
-    
+
     /* box-shadow: 0px 0px 1px 5px rgb(98, 0, 0); */
 }
 .abouticonimg{
     border-radius: 50%;
+    margin-bottom: 120px;
     box-shadow: 0px 0px 1px 5px rgb(98, 0, 0);
 }
 .aboutcolor{
@@ -207,7 +210,7 @@ text-transform: uppercase;
         /* background: linear-gradient(90deg, rgb(0, 0, 0) 0, rgb(255, 255, 255) 100%); */
     }
     #aabout{
-        height:1300px;
+        height:1000px;
     }
     #aboutme{
         font-size: 40px;
