--- a/style.css
+++ b/style.css
@@ -248,22 +248,29 @@ a:hover{
     padding-top: 100px;
     padding-bottom:80px;
     /* background: linear-gradient(135deg,rgb(0, 0, 0) ,rgb(36, 36, 36) ,rgb(12,12,12)); */
-    background: linear-gradient(157deg, rgb(19, 19, 19), rgb(0, 0, 0));
-
+    background: linear-gradient(45deg, rgb(255, 255, 255) 10%, rgb(255, 144, 144) ) ;
+/* background-image: url("./projects/todo.jpg"); */
+/* background-blend-mode:10 ; */
    
+    /* background-color: rgb(22, 20, 20); */
 }
 .projectshead h1{
 /* font-family: 'Lobster', cursive;     */
 font-family: 'Rye', cursive;
-color:white;
+color:rgb(0, 0, 0);
     font-size: 60px;
 
 }
 .card{
     color:white;
-
-background: black;
-box-shadow: 0px 0px 3px 4px rgb(118, 118, 118);
+    border:2px solid white;
+    /* font-family: 'Playfair Display', serif; */
+font-family: 'PT Serif', serif;
+text-shadow: 1px 1px 2px black;
+background: transparent;
+font-size:19px;
+color:rgb(19, 1, 1);
+box-shadow: 0px 0px 3px 4px rgb(0, 0, 0);
 }
 
 .projects2{
@@ -279,16 +286,22 @@ box-shadow: 0px 0px 3px 4px rgb(118, 118, 118);
         display: none;
         /* display: none; */
     }
+    .card{
+        box-shadow: none;
+        border:2px solid white;
+    }
     .projects2{
         /* display: none; */
         padding-top: 20px;
         padding-bottom: 70px;
         display: normal;
+
          
     }
-    .card{
-        /* width:50%; */
-    }
+        .carousel-inner{
+            margin-left: 12px;
+            max-height: 500px;
+        }
         .projectshead h1 {
             /* font-family: 'Lobster', cursive;     */
             font-family: 'Rye', cursive;
