--- a/bootstrap.css
+++ b/bootstrap.css
@@ -3992,7 +3992,9 @@ textarea.form-control-lg {
   border: 1px solid transparent;
   border-radius: 0.25rem;
   transition: box-shadow 0.15s ease-in-out;
+  /* background-color: red; */
 }
+
 @media (prefers-reduced-motion: reduce) {
   .navbar-toggler {
     transition: none;
@@ -4072,6 +4074,12 @@ textarea.form-control-lg {
   }
   .navbar-expand-md .navbar-toggler {
     display: none;
+  }
+}
+@media screen and (max-width: 440px){
+
+  .navbar-toggler {
+    background: linear-gradient(45deg, rgb(44, 24, 24) , rgb(20, 5, 5)  ) !important;
   }
 }
 @media (min-width: 992px) {
@@ -5866,6 +5874,7 @@ textarea.form-control-lg {
 } */
 .carousel-control-prev-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
+  
 }
 
 .carousel-control-next-icon {
