--- a/style.css
+++ b/style.css
@@ -5,27 +5,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Rye&display=swap');
 body{
     overflow-x: hidden;
+    background-color: #03030a;    
+    /* background-color: #03030a;     */
 
 }
 @media screen and (max-width:440px) {
-    body{
-        /*   */
-        /* overflow-x: hidden; */
-        /* -ms-overflow-style: none; */
-            /* IE and Edge */
-        /* scrollbar-width: none; */
+    .hero{
+        padding-bottom: 80px;
     }
 }
 .hero{
     /* background-image: url("./images/bg.avif"); */
     /* padding-top:0px !important;     */
-    
+    /* background:linear-gradient(155deg,rgb(39, 18, 18) 4% ,black 15% ,rgb(39, 18, 18) 87%);  */
     /* background:linear-gradient(155deg,white 8% ,black 8%); */
-    background:linear-gradient(155deg,rgb(39, 18, 18) 4% ,black 15% ,rgb(39, 18, 18) 87%); 
-    
-    height: 100vh;
+    /* height: 100vh; */
     background-repeat: no-repeat;
     background-size: cover;
+    padding-bottom: 100px;
 }
 .navbar{
     background: transparent;
@@ -76,22 +73,32 @@ font-size: 2.7rem;
     /* position: absolute; */
     background-color: black;
 }
-
+.herotxt h1{
+    font-size: 4rem;
+}
 .text-typing {
     padding:20px 30px;
-    font-size:35px;
-    color:white;
+    /* font-size:55px; */
+    color:rgb(244, 244, 244);
+    text-shadow: 0px 0px 8px rgb(86, 119, 145);
     font-family:monospace;
     border-radius:50px;
     margin-top:calc(0.2*100%);
     font-family: 'Playfair Display', serif;
 text-transform: uppercase;
 }
+.herotxt2{
+    text-shadow:0px 0px 4px rgb(86,119,145);
+    color: rgb(244, 244, 244) ;
+    font-family:'Playfair Display', serif;
+    padding-left: 50px;
+    /* font-size: 3rem; */
+}
 .text-typing h1 {
   margin:0px;
-  white-space:nowrap;
-  overflow:hidden;
-    animation : heroanime 3s ease-in ;
+  /* white-space:nowrap; */
+  /* overflow:hidden; */
+    /* animation : heroanime 3s ease-in ; */
     animation-iteration-count: 1;
 }
 @media screen and (max-width:440px) {
@@ -102,9 +109,93 @@ text-transform: uppercase;
         height:400px;
         background-color: aqua;
     }
-    .hero{
-        display: none;
+    .herotxt h1{
+        font-size: 2.2rem;
     }
+    .herodesc{
+        font-size: 1.5rem;
+    }
+}
+.heroimgdiv{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    overflow: hidden;
+    width: 400px;
+    margin-top: 150px;
+    margin-left: 150px;
+    height: 400px;
+        border: 2px solid rgb(103 216 242);
+            box-shadow: 0px 0px 25px rgb(86, 119, 145);
+    animation: positionleft 1.8s normal;
+    position: relative;
+        padding-top: 78px;
+}
+@media screen and (max-width:440px) {
+    .heroimgdiv{
+        width: 200px;
+        height: 200px;
+        margin-inline: auto;
+        margin-top: 10px;
+    }
+    
+}
+@keyframes positionleft {
+   0%{
+        left:-1900px;
+   }
+   100%{
+        left:0;
+   }
+    
+}
+.heroimgdiv img{
+    width: 200%;
+    height: 200%;
+    object-fit: cover;
+
+}
+.herodesc{
+    color:wheat;
+    font-family: 'Courier New', Courier, monospace;
+    /* font-family: 'PT Serif', serif; */
+    font-size: 1.5rem;
+}
+@media  screen and (max-width:440px) {
+    .heroimgdiv{
+        padding-top: 30px;
+    }
+    
+}
+.herodesc h2
+{
+    font-size: 1.5rem;
+}
+.text-typing3{
+                font-size: 50px;
+                    color: rgb(243, 223, 137);
+                    text-shadow: 0px 0px 25px rgb(86,119,145);
+                        font-family: 'Playfair Display', serif;
+                    font-weight: bold;
+}
+                span {
+                    color: rgb(103 216 242);
+                    /* position: relative; */
+                    /* top: 0;   */
+                }
+        
+             
+@media screen and (max-width:440px) {
+    .text-typing3{
+        font-size: 30px;
+        /* color: rgb(0, 0, 0); */
+        padding-left: 20px;
+        text-shadow: 0px 0px 25px rgb(86, 119, 145);
+        font-family: 'Playfair Display', serif;
+        font-weight: bold;
+    }
+    
 }
 @media screen and (min-width:441px) {
     .hero2{
@@ -174,20 +265,16 @@ text-transform: uppercase;
 }
 
 .aboutimg{
-    border: 10px solid black;
-    box-shadow: 15px 12px 12px rgb(30, 30, 30);
+    /* border: 10px solid black; */
+    /* box-shadow: 15px 12px 12px rgb(30, 30, 30); */
 }
 .about{
     /* background: linear-gradient(35deg ,rgb(230,182,237) 39%,rgb(199, 114, 207)25%); */
     height:calc(1.0*100%);
     width:100%;
-    color: rgb(15, 18, 11);
-    padding-bottom: 20px;
-    
-    /* background: linear-gradient(90deg ,rgb(0, 0, 0) 20.8%,rgb(219, 84, 84) 10%); */
-    background: linear-gradient(90deg ,rgb(0, 0, 0) 20.8%,rgb(255, 255, 255) 10%);
-
-    /* background: linear-gradient(135deg,rgb(26, 19, 26) 3%, black 10%,rgb(31, 23, 31) 87%); */
+    color: white;
+    /* color: rgb(15, 18, 11); */
+    padding-bottom: 50px;
     padding-top:74px ;    
 
 }
@@ -195,36 +282,65 @@ text-transform: uppercase;
     color: red;
 }
 .aboutpoints{
-    font-size: 25px;
-    color:rgb(0, 0, 0);
-    font-family: 'PT Serif', serif;
-
+    font-size: 24px;
+    /* color:rgb(0, 0, 0); */
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 25px rgb(86, 119, 145);
+    /* font-family: 'PT Serif', serif; */
+/* font-family: 'Mansalva', cursive; */
+    /* font-family: 'Courier New', Courier, monospace; */
+    /* font-family: 'Rye'; */
+    font-weight: "400";
 }
+
 /* .abouticons{
     border-radius: 50%; */
 
     /* box-shadow: 0px 0px 1px 5px rgb(98, 0, 0); */
 
-.abouticonimg{
-    border-radius: 50%;
-    margin-bottom: 120px;
-    box-shadow: 0px 0px 1px 5px rgb(98, 0, 0);
-}
+
 .aboutcolor{
-    color:rgb(7, 0, 57);
+    color:rgb(153, 192, 246);
+}
+.aboutimgdiv{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    overflow: hidden;
+    padding-top: 60px;
+    border: 2px solid rgb(103 216 242);
+    box-shadow: 0px 0px 25px rgb(86, 119, 145);
+    /* margin-left: 150px; */
+    margin-inline: auto;
+    width: 400px;
+        height: 400px;
+}
+.aboutpara h4{
+    font-size: 1.5rem;
+    font-family: 'Courier New', Courier, monospace;
+}
+.aboutimgdiv img{
+    width: 150%;
+    height: 150%;
+    object-fit: cover;
+
 }
 @media screen and (max-width:440px) {
-    .aboutimg{
-        width: 250px;
-        height: 300px;
-        box-shadow: 0 0 0  0 red;
+    .aboutimgdiv{
+        width: 200px;
+        height: 200px;
+        /* box-shadow: 0 0 0  0 red; */
+    }
+    .aboutimgdiv{
+        padding-top: 30px;
     }
     .about{
         /* height: 1000px; */
         /* outline: 1px solid red; */
-        max-width: 90% !important;
-        background: linear-gradient(90deg, rgb(0, 0, 0) 12.8%, rgb(255, 255, 255) 10%);
-        background: linear-gradient(90deg, rgb(0, 0, 0) 12.8%, rgb(255, 255, 255) 10%);
+        /* max-width: 90% !important; */
+        /* background: linear-gradient(90deg, rgb(0, 0, 0) 12.8%, rgb(255, 255, 255) 10%); */
+        /* background: linear-gradient(90deg, rgb(0, 0, 0) 12.8%, rgb(255, 255, 255) 10%); */
     }
     #aabout{
         height:900px;
@@ -233,9 +349,9 @@ text-transform: uppercase;
         font-size: 40px;
         margin-left: 59px;
     }
-    .aboutpoints{
+    .aboutpoints , .aboutpoints2 , .aboutpoints3{
         font-size: 15px;
-        margin-left: calc(0.08*100%);
+        /* margin-left: calc(0.08*100%); */
         overflow-x: scroll;
     }
 }
@@ -250,8 +366,8 @@ a:hover{
 .projects{
     padding-top: 100px;
     padding-bottom:80px;
-    background: linear-gradient(90deg,rgba(214,250,216,0.08),
-    rgba(235,253,239,0.1)),url("images/newbg.jpg");
+    /* background: linear-gradient(90deg,rgba(214,250,216,0.08),
+    rgba(235,253,239,0.1)),url("images/newbg.jpg"); */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top;
@@ -267,15 +383,16 @@ a:hover{
 .projectshead h1{
 /* font-family: 'Lobster', cursive;     */
 font-family: 'Rye', cursive;
-color:rgb(0, 0, 0);
+color:rgb(193, 252, 226);
     font-size: 60px;
+    text-shadow: 0px 0px 25px rgb(86, 119, 145);
 
 }
 .card{
     color:white;
-    border:2px solid rgba(255,255,255,0.027);
+    border:1px solid rgb(153, 232, 245);
     border-radius: 10px;
-    backdrop-filter: blur(20px);
+    /* backdrop-filter: blur(20px); */
     /* font-family: 'Playfair Display', serif; */
 font-family: 'PT Serif', serif;
 /* text-shadow: 1px 1px 1px black; */
@@ -283,7 +400,8 @@ background: transparent;
 font-size:19px;
 /* color:rgb(19, 1, 1); */
 /* color:white; */
-max-width: calc(0.25*100vw);
+/* max-width: calc(0.25*100vw); */
+box-shadow: 0px 0px 25px rgb(86, 119, 145);
 }
 .col-4 .card :hover
 {
@@ -305,13 +423,16 @@ max-width: calc(0.25*100vw);
 .card-img-top{
     height: 150px;
 }
+.card-img-top2{
+    height: 250px;
+}
 .btn-warning
 {
     /* background-color: rgba(255, 255, 255, 0.604) !important;  */
 }
 .projects2{
-    background: linear-gradient(90deg, rgba(214, 250, 216, 0.08),
-                rgba(235, 253, 239, 0.1)), url("images/newbg.jpg");
+    /* background: linear-gradient(90deg, rgba(214, 250, 216, 0.08),
+                rgba(235, 253, 239, 0.1)), url("images/newbg.jpg"); */
     /* background: linear-gradient(57deg, rgb(38, 19, 19), rgb(0, 0, 0)); */
     background-repeat: no-repeat;
         background-size: cover;
@@ -325,7 +446,7 @@ max-width: calc(0.25*100vw);
 }
 @media screen and (max-width:440px) {
     .projects{
-        display: none;
+        /* display: none; */
         /* display: none; */
     }
     .card{
@@ -334,8 +455,8 @@ max-width: calc(0.25*100vw);
         margin-left: calc(0.05*100vw);
     }
     .card{
-        box-shadow: none;
-        border:2px solid white;
+        box-shadow: 0px 0px 10px rgb(86, 119, 145);
+        border:1px solid aqua;
     }
     .projects2{
         /* display: none; */
@@ -357,15 +478,31 @@ max-width: calc(0.25*100vw);
     
         }
 }
-
+.majorprojecthead h1{
+    font-size: 2.2rem;
+    font-family: 'Malam', cursive;
+    color:rgb(193, 252, 226);
+    /* text-shadow: 0px 0px 25px rgb(86, 119, 145); */
+}
+.minorprojecthead{
+    margin-top: 50px;
+}
+.minorprojecthead h1{
+    font-size: 2.2rem;
+    font-family: 'Malam', cursive;
+    color:rgb(193, 252, 226);
+    /* text-shadow: 0px 0px 25px rgb(86, 119, 145); */
+}
 
 /* SKills*/
 .skills{
+
     padding-top: 79px;
     padding-bottom: 50px;
-    background-color: rgb(0, 0, 0);
-    background: linear-gradient(90deg, rgba(21, 20, 20, 0.63), rgba(0, 0, 0, 0.436)) ,url("./images/bg2.jpg ") ;
+    /* background-color: rgb(0, 0, 0); */
+    /* background: linear-gradient(90deg, rgba(21, 20, 20, 0.63), rgba(0, 0, 0, 0.436)) ,url("./images/bg2.jpg ") ; */
     color:white;
+        text-shadow: 0px 0px 25px rgb(86, 119, 145);
 }
 #skillshead {
     text-align: center;
@@ -374,13 +511,27 @@ max-width: calc(0.25*100vw);
     /* text-shadow: 3px 3px 4px red; */
 color: #fff;
     /* text-shadow:; */
+    font-family: 'Mansalva', cursive;
     text-decoration: underline;
+
 }
 .skillshead2{
     font-size: 30px;
-    font-family: 'PT Serif', serif;
+    font-family: "Rye", cursive;
+    /* font-family: 'PT Serif', serif; */
 }
+.imgskills2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+    overflow: hidden;
+}
+.imgskills{
+    width: 100px;
+    height: 100px;
+    /* box-shadow: 0px 0px 2px rgb(86, 119, 145); */
+}
 @media screen and (max-width:440px) {
     .skills{
         height: 990px;
@@ -403,7 +554,7 @@ color: #fff;
 .achievements{
     padding-top: 80px;
     padding-bottom: 40px;
-    background-image: url("./images/bg.avif");
+    /* background-image: url("./images/bg.avif"); */
     background-size: cover;
     background-attachment: fixed;
     color: white;
@@ -413,6 +564,8 @@ color: #fff;
 .achievementshead h1{
     font-size: 70px;
     text-align: center;
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 25px rgb(86, 119, 145);
 }
 .achievementshead{ 
     font-family: 'Playfair Display', serif;
@@ -420,6 +573,10 @@ color: #fff;
 }
 .ar{
     font-size: 25px;
+    display: flex;
+    flex-direction: row;
+    /* align-items: center; */
+    /* justify-content: center; */
     font-family: 'PT Serif', serif;
 }
 @media screen and (max-width:440px) {
@@ -438,28 +595,88 @@ color: #fff;
              
     }
 }
+/*Work Experience*/
+.workexhead h1{
+    font-size: 70px;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 25px rgb(86, 119, 145);
+    font-family: 'Lobster', cursive;
+}
+.workexdesc{
 
+}
+.workexdescbox{
+    margin-top:25px ;
+        padding: 20px 30px;
+            border: 2px solid rgb(68, 115, 151);
+            box-shadow: 0px 0px 25px rgb(86, 119, 145);
+}
+.workexdesc h2{
+    font-size: 2rem;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 25px rgb(86, 119, 145);
+    font-family: 'PT Serif', serif;
+}
+.workexdesc h3{
+    font-size: 1.7rem;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 25px rgb(86, 119, 145);
+    font-family: 'PT Serif', serif;
+}
+.workexdesc h4{
+    font-size: 1rem;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 25px rgb(86, 119, 145);
+    font-family: 'PT Serif', serif;
+}
+.workexdesc h5{
+    font-size: 1.2rem;
+    text-align: center;
+    font-weight: 100;
+    color: rgb(174 255 249);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /* font-family: 'Lobster', cursive; */
+    /* font-family: 'Playfair Display', serif;    text-shadow: 0px 0px 25px rgb(86, 119, 145); */
+    /* font-family: 'PT Serif', serif; */
+}
+.workExperience{
+    padding-bottom: 50px;
+}
 /*Contact me*/
 .contact{
     padding-top: 78px;
     padding-bottom: 40px;
     /* background: linear-gradient(45deg ,  rgb(226, 228, 80) 75%, rgb(228, 207, 75) 1% ) ; */
-    background: linear-gradient(45deg ,  rgb(253, 255, 149) , rgb(236, 236, 164)  ) ;
+    /* background: linear-gradient(45deg ,  rgb(253, 255, 149) , rgb(236, 236, 164)  ) ; */
 
 }
 .form-control{
-    background-color: rgb(181, 181, 239);
-    color:rgb(32, 20, 20);
+    /* background-color: rgb(181, 181, 239); */
+    color: rgb(255, 255, 255);
+        /* text-shadow: 0px 0px 25px rgb(86, 119, 145); */
+    /* color:rgb(32, 20, 20); */
+    color: #03030a;
+    font-weight: 400;
 }
 .form-control::placeholder{
-    color: rgb(32, 20, 20);
+    color: #03030a;
+    font-weight: 400;
+    /* color: rgb(32, 20, 20); */
 }
 .contacthead h1{
     text-align: center;
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 25px rgb(86, 119, 145);
     font-family: 'Playfair Display', serif;
     font-size: 70px;
 }
 .form-label{
+    color: rgb(255, 255, 255);
+        text-shadow: 0px 0px 25px rgb(86, 119, 145);
     font-family: 'Rye', cursive;
 }
 @media  screen and (max-width:440px) {
@@ -479,12 +696,14 @@ color: #fff;
 .connect{
     padding-top: 10px;
     padding-bottom: 30px;
-    background: linear-gradient(35deg, white, rgb(255, 239, 239));
+    /* background: linear-gradient(35deg, white, rgb(255, 239, 239)); */
 }
 .connecthead{
     text-align: center;
         font-family: 'PT Serif', serif;
         font-size: 70px;
+        color: rgb(255, 255, 255);
+        text-shadow: 0px 0px 25px rgb(86, 119, 145);
 }
 @media screen and (max-width:440px) {
     .connect{
@@ -505,7 +724,11 @@ color: #fff;
         /* overflow-x: hidden; */
     }
 }
-
+.abouticonimg {
+    border-radius: 50%;
+    margin-bottom: 120px;
+    box-shadow: 0px 0px 25px rgb(86, 119, 145);
+}
 /*footer*/
 .footer{
     background-color: black;
